--- a/espacoEstudo.html
+++ b/espacoEstudo.html
@@ -24,66 +24,127 @@
 
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png"
-						style="display: block;max-width: 15%;height: auto;align-items: center;">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					<div>
+						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/ELEMENTO_.png"
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
+						<img src="images/FABIANA RATTI.png"
+							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+					</div>
 				</header>
+				<ul class="icons" style="float: right;">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+				</ul>
 
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Espaço de estudo</h1>
+						<h1>Espaço de estudos</h1><br />
 					</header>
-
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 					<header>
-						<h2 style="color:#987F42;">SETOR CLÍNICO<br /></h2><br /><br />
+						<h2 style="color:#987F42;">Espaço de estudo e pesquisa <br /></h2><br /><br />
 					</header>
-					<h3>Fabiana Ratti – Psicanalista responsável pelo setor técnico-clínico dos
-						atendimentos.</h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
-						Fabiana Ratti é Psicóloga (PUC-SP), Psicanalista Lacaniana, mestre pela Faculdade de Psicologia
-						Clínica PUC-SP, atuou em órgãos não governamentais como psicanalista e supervisora atendendo
-						diversos sintomas e faixas etárias. Trabalha em consultório particular desde 1998 sob o
-						referencial teórico da última clínica da Psicanálise Lacaniana. Autora do livro Inibição
-						Melancólica: um estudo psicanalítico sobre a dor de existir (2016). Blog: artesedebates Youtube:
-						Fabiana Ratti
-					</p>
-					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR ADMINISTRATIVO<br /></h2><br /><br />
-					</header>
-					<h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de
-						pacientes para os psicanalistas da Rede Unbewusste.
-						<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
-							class="icon brands fa-linkedin"></a></h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
-						e há 10 anos passou a atuar na área de consultoria administrativo-financeira para empresas de
-						pequeno e médio porte, incluindo organizações não governamentais sem fins lucrativos.
+						O espaço de estudos tem como objetivo discutir e pesquisar possíveis manejos clínicos, sob
+						referencial da psicanálise Lacaniana, para lidar com o gozo sob o referencial da clínica
+						borromeana. A ideia é trabalhar em grupo de estudos para desenvolver conceitos clínicos na obra
+						de Sigmund Freud e Jacques Lacan através de textos freudianos, lacanianos e pós lacanianos.
+						Nossa ideia é pensar o sujeito via nó borromeano, articulando os registros entre real, simbólico
+						e imaginário. Partiremos da concepção Freudiana de que todo sujeito tem uma capacidade
+						perversa-polimorfa da dimensão pulsional apreendida na clínica e assim, poderemos raciocinar os
+						manejos clínicos na perspectiva dos registros, numa perspectiva do Seminário XX Mais, Ainda
+						quando Lacan retifica seu conceito de inconsciente, passando de um deciframento de saber para o
+						manejo sob o referencial da substância gozante.
 					</p>
 
 					<hr class="major" />
 
 					<header>
-						<h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
+						<h3 style="color:#987F42;">SIGNIFICADO DE UNBEWUSSTE<br /></h2><br /><br />
 					</header>
-					<h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de
-						conteúdo para divulgação da Rede. </h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
-						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
-						setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter
-						sua própria empresa de artes.
+						<b>Unbewusste</b> significa inconsciente em alemão. Língua mãe de Sigmund Freud (1856-1939), pai
+						da psicanálise. <br /><br />
+						O projeto <b>Unbewusste</b> tem como base a psicanálise. <br /><br />
+						A psicanálise teve início no começo do século XX com Sigmund Freud (1856-1939). Em A
+						Interpretação dos sonhos (1900), Freud apresenta para a sociedade que o inconsciente é um órgão
+						psíquico que possui leis próprias que intervém no intelectual, no comportamento e nas escolhas
+						inconscientes do sujeito. <br /><br />
+						Em Chistes e suas relações com o inconsciente (1905) e A Psicopatologia da vida cotidiana (1905)
+						Freud explica que os atos falhos, os chistes, os lapsos, os sintomas e os sonhos são
+						manifestações do inconsciente e eles podem ser interrogados e desvendados, surgindo assim novas
+						ideias e caminhos a serem seguidos pelo sujeito. <br /><br />
+						Os sintomas podem frear e dificultar a vida afetiva, profissional ou financeira da pessoa. Desta
+						forma, neste projeto, incluímos a noção de inconsciente e trabalhamos de maneira profunda a
+						questão do sujeito, seus talentos, suas capacidades e inserção social. <br /><br />
+						Freud viveu até 1939, e então, Jacques Lacan (1901- 1981), psicanalista francês, tomou conta do
+						cenário psicanalítico. Lacan divide o aparelho psíquico em Real, Simbólico e Imaginário e os
+						articula no nó borromeano, um pressuposto topológico matemático. Segundo ele, o olhar que temos
+						frente ao mundo é pelo viés dessa articulação e assim ele inclui o sintoma, que faz furo e
+						interrogação no modo de ser do sujeito e no modo de ver o mundo. <br /><br />
+						Lacan, em sua última clínica, recorre ao termo em alemão <b>Unbewusste</b> para falar sobre a
+						fugacidade e evanescência do inconsciente. O quanto o inconsciente não é algo estanque e
+						delimitado, muito ao contrário. É algo que irrompe, que aparece, que surge em momentos
+						inusitados e deixa sua impressão, sua marca. <br /><br />
+						É a partir desse conceito de inconsciente que podemos trabalhar e ir em direção à criatividade,
+						à produção criativa, à singularidade. E assim, mesmo no meio da massa, o sujeito pode se
+						diferenciar e se destacar por sua produção. O sujeito pode construir aquilo que tem de melhor a
+						oferecer e fazer produções que tenha um retorno para si, para o outro, para a sociedade e ainda
+						faça laço social. <br /><br />
+						<b>Unbewusste</b> é o “modo que cada um se relaciona com seu inconsciente, na medida em que o
+						inconsciente o determina.” Parafraseando Lacan em R.S.I.
+
 					</p>
+
+					<hr class="major" />
+
+					<header>
+						<h3 style="color:#987F42;">NEUROSE <br /></h3><br /><br />
+					</header>
+					<p>
+						Para as <b>neuroses</b> Freud apresenta como forma de tratamento a associação livre: “Sempre
+						insistimos
+						com o paciente para seguir apenas a superfície de sua consciência e pôr de lado toda esta
+						crítica sobre aquilo que encontra, qualquer que seja a forma que esta crítica possa assumir.”
+						(Freud, 1916/1917-1996, p. 294). A psicanálise abre a possibilidade de num espaço singular,
+						frente a um analista, o sujeito poder falar tudo que vem à cabeça associando sonhos, situações,
+						sentimentos; sofrimentos do passado, sonhos do futuro e situações do presente. Um discurso que
+						não seria do semblante, como diria Lacan anos mais tarde.
+					</p>
+
+					<hr class="major" />
+					<header>
+						<h3 style="color:#987F42;">PSICOSE <br /></h3><br /><br />
+					</header>
+					<p>
+						Lacan, por seu lado, a partir de Freud, apresenta uma técnica para dar sustentação às
+						<b>psicoses</b>.
+						Em seu Seminário 3 (1955/56), a partir do trabalho de Freud com o caso do Presidente Schreber
+						(1912), Lacan nomeia seu manejo de Secretário do Alienado. Através do testemunho e do
+						secretariado, podemos dar continência e direção ao tratamento das psicoses. A clássica
+						associação livre gera angústia e pode até levar o sujeito ao surto se este tiver uma amarração
+						frágil entre os registros real, simbólico e imaginário.
+					</p>
+
+					<hr class="major" />
+					<header>
+						<h3 style="color:#987F42;">PERVERSÃO <br /></h3><br /><br />
+					</header>
+					<p>
+						Ao falar sobre <b>perversões</b>, quais seriam os manejos possíveis? Pela via da psicanálise,
+						como
+						lidar com as perversões? Embora os sintomas e as resistências sejam absolutamente singulares a
+						cada sujeito, podemos, com finalidade de pesquisa, agrupar certas semelhanças para construir
+						recursos de forma a evoluir clinicamente. Este seria um dos propósitos do grupo de estudos.
+						Discorrer sobre sintomas e resistências do perverso, além de levantar questões a respeito da
+						direção e dos manejos possíveis no tratamento da perversão.
+					</p>
+				</section>
 			</div>
 		</div>
 
@@ -120,7 +181,7 @@
 						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
 					</ul>
 				</nav>
-				
+
 				<!-- Section -->
 				<section>
 					<header class="major">
@@ -128,9 +189,9 @@
 					</header>
 					<ul class="contact">
 						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+						<li class="icon solid fa-phone">(11) 99955-8857</li>
+						<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933 <br />conjunto 75 - Pinheiros<br />
+							São Paulo, CEP: 05414-012</li>
 					</ul>
 				</section>
 
@@ -151,7 +212,19 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
