--- a/linhaAtendimento.html
+++ b/linhaAtendimento.html
@@ -24,65 +24,50 @@
 
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png"
-						style="display: block;max-width: 15%;height: auto;align-items: center;">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					<div>
+						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/ELEMENTO_.png"
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
+						<img src="images/FABIANA RATTI.png"
+							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+					</div>
 				</header>
+				<ul class="icons" style="float: right;">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+				</ul>
 
 				<!-- Content -->
 				<section>
 					<header class="main">
-						<h1>Linha de atendimento: clínica do Real</h1>
+						<h1>Linha de atendimento</h1>
 					</header>
-
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-					<header>
-						<h2 style="color:#987F42;">SETOR CLÍNICO<br /></h2><br /><br />
-					</header>
-					<h3>Fabiana Ratti – Psicanalista responsável pelo setor técnico-clínico dos
-						atendimentos.</h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Fabiana Ratti é Psicóloga (PUC-SP), Psicanalista Lacaniana, mestre pela Faculdade de Psicologia
-						Clínica PUC-SP, atuou em órgãos não governamentais como psicanalista e supervisora atendendo
-						diversos sintomas e faixas etárias. Trabalha em consultório particular desde 1998 sob o
-						referencial teórico da última clínica da Psicanálise Lacaniana. Autora do livro Inibição
-						Melancólica: um estudo psicanalítico sobre a dor de existir (2016). Blog: artesedebates Youtube:
-						Fabiana Ratti
-					</p>
-					<hr class="major" />
 
 					<header>
-						<h2 style="color:#987F42;">SETOR ADMINISTRATIVO<br /></h2><br /><br />
+						<h2 style="color:#987F42;">Linha de atendimento: clínica do Real<br /></h2><br /><br />
 					</header>
-					<h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de
-						pacientes para os psicanalistas da Rede Unbewusste.
-						<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
-							class="icon brands fa-linkedin"></a></h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
-						e há 10 anos passou a atuar na área de consultoria administrativo-financeira para empresas de
-						pequeno e médio porte, incluindo organizações não governamentais sem fins lucrativos.
-					</p>
 
-					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
-					</header>
-					<h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de
-						conteúdo para divulgação da Rede. </h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
-						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
-						setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter
-						sua própria empresa de artes.
+						A Psicanálise Lacaniana pós 1970 (clínica do Real) consegue preservar a profundidade que a
+						psicanálise traz com as questões do inconsciente que Freud aborda no início do século XX e
+						incluir pontos práticos e objetivos do presente. Segundo Lacan, a clínica da atualidade tem como
+						objetivo: projeto singular e laço social. O diagnóstico diferencial das estruturas clínicas, dos
+						sintomas e das síndromes é um procedimento muito importante para a direção do tratamento, porém
+						o objetivo é que o sujeito, independentemente de seu diagnóstico, consiga fazer projetos de
+						realização de desejo e construir relações afetivas com: colegas, amigos, parceiros e família. As
+						questões são voltadas para a atualidade e a vida prática do cotidiano de cada sujeito em sua
+						absoluta singularidade. O Projeto une recursos da psicanálise para que o sujeito possa ser ativo
+						e batalhar por seus projetos, desembaraçado de impedimentos emocionais, de forma mais eficaz e
+						direcionada. Que assim os profissionais das empresas consigam entregar no menor tempo possível
+						seu trabalho, com qualidade, criatividade e singularidade. Que consigam se posicionar colocando
+						sua opinião e administrar possíveis rixas e invejas, de forma a diminuir os atritos entre
+						colegas. Consequentemente, os profissionais trabalharão com mais saúde mental e terão tempo e
+						espaço psíquico para cuidar de suas vidas pessoais: relacionamento, família, casa, um possível
+						estudo no tempo livre.
 					</p>
 			</div>
 		</div>
@@ -128,9 +113,9 @@
 					</header>
 					<ul class="contact">
 						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+						<li class="icon solid fa-phone">(11) 99955-8857</li>
+						<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros<br />
+							São Paulo, CEP: 05414-012</li>
 					</ul>
 				</section>
 
@@ -150,7 +135,19 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
