--- a/painelCultural.html
+++ b/painelCultural.html
@@ -24,15 +24,22 @@
 
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png"
-						style="display: block;max-width: 15%;height: auto;align-items: center;">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					<div>
+						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/ELEMENTO_.png"
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
+						<img src="images/FABIANA RATTI.png"
+							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+					</div>
 				</header>
+				<ul class="icons" style="float: right;">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+				</ul>
 
 				<!-- Content -->
 				<section>
@@ -127,10 +134,12 @@
 						<h2>Contato</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-phone">(11) 99955-8857</li>
+							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 - Pinheiros<br />
+								São Paulo, CEP: 05414-012</li>
+						</ul>
 					</ul>
 				</section>
 
@@ -149,7 +158,19 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
