--- a/psicanalistaParceiro.html
+++ b/psicanalistaParceiro.html
@@ -24,66 +24,61 @@
 
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png"
-						style="display: block;max-width: 15%;height: auto;align-items: center;">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					<div>
+						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/ELEMENTO_.png"
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
+						<img src="images/FABIANA RATTI.png"
+							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+					</div>
 				</header>
+				<ul class="icons" style="float: right;">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+				</ul>
 
 				<!-- Content -->
 				<section>
 					<header class="main">
 						<h1>Psicanalista parceiro</h1>
 					</header>
-
-					<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
 					<header>
-						<h2 style="color:#987F42;">SETOR CLÍNICO<br /></h2><br /><br />
+						<h3 style="color:#987F42;">Rede de atendimento para psicanalistas<br /></h3><br /><br />
 					</header>
-					<h3>Fabiana Ratti – Psicanalista responsável pelo setor técnico-clínico dos
-						atendimentos.</h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
-						Fabiana Ratti é Psicóloga (PUC-SP), Psicanalista Lacaniana, mestre pela Faculdade de Psicologia
-						Clínica PUC-SP, atuou em órgãos não governamentais como psicanalista e supervisora atendendo
-						diversos sintomas e faixas etárias. Trabalha em consultório particular desde 1998 sob o
-						referencial teórico da última clínica da Psicanálise Lacaniana. Autora do livro Inibição
-						Melancólica: um estudo psicanalítico sobre a dor de existir (2016). Blog: artesedebates Youtube:
-						Fabiana Ratti
+						UNBEWUSSTE é uma clínica de psicanálise onde teremos o entrecruzamento borromeano de Redes de
+						atendimento psicanalítico. Como psicanalista, nesses 20 anos de formada fui atendendo pessoas
+						que foram me encaminhando pacientes, analisantes, o boca a boca foi acontecendo... Mas os
+						horários vão encavalando, não consigo atender a todos, então decidimos formalizar esses
+						encaminhamentos e assim eu supervisiono psicanalistas, eles atendem na mesma qualidade e
+						dedicação que eu. A primeira Rede que estamos montando é a de empresários e pessoas que
+						trabalham em empresa. Tudo é discutido na posição de sujeito, na singularidade de cada um, no
+						estilo e universo da pessoa.<br /><br />
+						Os psicanalistas que quiserem trabalhar com esse público, que estão dispostos a estudar, a
+						discutir casos clínicos, a fazer supervisão, entrem em contato. <br /><br />
+						Algumas pessoas desse público são expatriadas, estrangeiros que estão trabalhando em empresas no
+						BR por um período. Dessa forma, também precisamos de psicanalistas que atendam em outra
+						língua... francês, inglês, espanhol... temos dificuldade de encaminhar quando a pessoa gostaria
+						de falar em outro idioma. <br /><br />
+						Outras Redes serão montadas de acordo com a procura. Atendemos crianças, adolescentes, adultos,
+						terceira idade. À medida que esta procura for excedendo, vamos aumentando o número de Redes
+						UNBEWUSSTE borromeana.
+
+						Envie seu CV se você quer ser um psicanalista da Ubewusste
+						Cada profissional fica no seu consultório e recebe pacientes/analisantes fazendo supervisão e
+						grupo de estudos na Ubewusste. <br /><br />
+						Todos os CVs serão lidos, mas somente serão chamados para uma entrevista de acordo com a
+						necessidade da Ubewusste. <br /><br />
+						Caso queiram participam podem aparecer no grupo de estudos que acontece....
+						Agradecemos o contato, o envio do CV e esperamos que possamos trabalhar futuramente juntos.
+						<br /><br />
+
 					</p>
 					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR ADMINISTRATIVO<br /></h2><br /><br />
-					</header>
-					<h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de
-						pacientes para os psicanalistas da Rede Unbewusste.
-						<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
-							class="icon brands fa-linkedin"></a></h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
-						e há 10 anos passou a atuar na área de consultoria administrativo-financeira para empresas de
-						pequeno e médio porte, incluindo organizações não governamentais sem fins lucrativos.
-					</p>
-
-					<hr class="major" />
-
-					<header>
-						<h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
-					</header>
-					<h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de
-						conteúdo para divulgação da Rede. </h3>
-					<img class="image" src="images/pic08.jpg" alt="" />
-					<p>
-						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
-						setor de marketing de agência de publicidade chegando a Diretor de Arte e então saiu para ter
-						sua própria empresa de artes.
-					</p>
 			</div>
 		</div>
 
@@ -127,10 +122,13 @@
 						<h2>Contato</h2>
 					</header>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-phone">(11) 99955-8857</li>
+							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933<br />conjunto 75 -
+								Pinheiros<br />
+								São Paulo, CEP: 05414-012</li>
+						</ul>
 					</ul>
 				</section>
 
@@ -150,7 +148,19 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
