--- a/atendimento.html
+++ b/atendimento.html
@@ -24,15 +24,22 @@
 
 				<!-- Header -->
 				<header id="header">
-					<img src="images/UNBEWUSSTE.png"
-						style="display: block;max-width: 15%;height: auto;align-items: center;">
-					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-					</ul>
+					<div>
+						<img src="images/UNBEWUSSTE.png" style="max-width: 20%;height: auto;align-items: center;">
+						<img src="images/ELEMENTO_.png"
+							style="max-width: 10%;height: auto;align-items: center;margin-left: 25%;">
+						<img src="images/FABIANA RATTI.png"
+							style="margin-bottom: 1%;margin-left: 22%;max-width: 20%;height: auto;align-items: center;">
+					</div>
 				</header>
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+				</ul>
 
 				<!-- Content -->
 				<section>
@@ -61,9 +68,9 @@
 						<h2 style="color:#987F42;">SETOR ADMINISTRATIVO<br /></h2><br /><br />
 					</header>
 					<h3>Raquel Pereira – Responsável pelo setor administrativo e planilhamento de fluxo de
-							pacientes para os psicanalistas da Rede Unbewusste.
-							<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
-								class="icon brands fa-linkedin"></a></h3>
+						pacientes para os psicanalistas da Rede Unbewusste.
+						<a href="https://www.linkedin.com/in/raquel-pereira-89b60113/"
+							class="icon brands fa-linkedin"></a></h3>
 					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
 						Raquel Pereira é consultora em Gestão Empresarial. Trabalhou por oito anos no mercado financeiro
@@ -77,7 +84,7 @@
 						<h2 style="color:#987F42;">SETOR DE MARKETING<br /></h2><br /><br />
 					</header>
 					<h3>Wilson Takeuchi – É responsável pela construção do site, das redes sociais e da produção de
-							conteúdo para divulgação da Rede. </h3>
+						conteúdo para divulgação da Rede. </h3>
 					<img class="image" src="images/pic08.jpg" alt="" />
 					<p>
 						Wilson Takeuchi é formado pelas Artes Plásticas na FAAP há 30 anos. Por vinte anos trabalhou no
@@ -100,72 +107,45 @@
 
 				<!-- Menu -->
 				<nav id="menu">
-						<header class="major">
-							<h2>Menu</h2>
-						</header>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="quemSomos.html">Quem Somos</a></li>
-							<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
-							<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
-							<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
-							<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
-							<li><a href="paraEmpresario.html">Para empresários</a></li>
-							<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
-							<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
-							<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
-							<li><a href="painelCultural.html">Painel Cultural</a></li>
-							<li><a href="biblioteca.html">Biblioteca</a></li>
-							<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
-							<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
-						</ul>
-					</nav>
-	
-				<!-- Section -->
-				<section>
 					<header class="major">
-						<h2>Ante interdum</h2>
+						<h2>Menu</h2>
 					</header>
-					<div class="mini-posts">
-						<article>
-							<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-						<article>
-							<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-							<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-						</article>
-					</div>
-					<ul class="actions">
-						<li><a href="#" class="button">More</a></li>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="quemSomos.html">Quem Somos</a></li>
+						<li><a href="redeAtendimento.html">Rede de Atendimento</a></li>
+						<li><a href="empresasParceiras.html">Empresas Parceiras</a></li>
+						<li><a href="psicanaliseEmpresa.html">Psicanálise na Empresa</a></li>
+						<li><a href="futuroEmpresario.html">Para futuros empresarios</a></li>
+						<li><a href="paraEmpresario.html">Para empresários</a></li>
+						<li><a href="espacoEstudo.html">Espaço de estudo</a></li>
+						<li><a href="linhaAtendimento.html">Linha de atendimento: clínica do Real</a></li>
+						<li><a href="psicanalistaParceiro.html">Psicanalista parceiro</a></li>
+						<li><a href="painelCultural.html">Painel Cultural</a></li>
+						<li><a href="biblioteca.html">Biblioteca</a></li>
+						<li><a href="parceria.html">Trabalhe em parceria conosco</a></li>
+						<li><a href="atendimento.html"></a>Inscreva-se para ser atendido</a></li>
 					</ul>
-				</section>
+				</nav>
 
 				<!-- Section -->
 				<section>
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>Contato</h2>
 					</header>
-					<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem
-						ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat
-						tempus aliquam.</p>
 					<ul class="contact">
-						<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-						<li class="icon solid fa-phone">(000) 000-0000</li>
-						<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-							Nashville, TN 00000-0000</li>
+						<ul class="contact">
+							<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+							<li class="icon solid fa-phone">(11) 99955-8857</li>
+							<li class="icon solid fa-home">R. Cônego Eugênio Leite, 933 <br />conjunto 75 - Pinheiros<br />
+								São Paulo, CEP: 05414-012</li>
+						</ul>
 					</ul>
 				</section>
 
 				<!-- Footer -->
 				<footer id="footer">
-					<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a
-							href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5
-							UP</a>.</p>
+					<p class="copyright">&copy; Fabiana Ratti. Todos os direitos Reservados.</p>
 				</footer>
 
 			</div>
@@ -179,7 +159,19 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+	var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+	(function(){
+	var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+	s1.async=true;
+	s1.src='https://embed.tawk.to/57d1c877cccb3b470cdb1d53/default';
+	s1.charset='UTF-8';
+	s1.setAttribute('crossorigin','*');
+	s0.parentNode.insertBefore(s1,s0);
+	})();
+	</script>
+	<!--End of Tawk.to Script-->
 </body>
 
 </html>
